--- a/Stories.html
+++ b/Stories.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>Home Page</title>
-        <link rel="stylesheet" href="i.css">
+        <link rel="stylesheet" href="Stories.css">
     </head>
     <div class="lit">
     <body>
@@ -29,7 +29,7 @@
         </div>
 
         <div class="next">
-            <a href="iSignUp.html">Next Page...</a>
+            <a href="StoriesSignUp.html">Next Page...</a>
         </div>
     
     </body>
