--- a/StoriesSignUp.html
+++ b/StoriesSignUp.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Sign up Page</title>
-        <link rel="stylesheet" href="i.css">
+        <link rel="stylesheet" href="Stories.css">
     </head>
     <body>
           <div class="heads">
@@ -61,7 +61,7 @@
         </div>
     </div> <br> <br>
     <div class="back">
-        <a href="i.html">Back</a>
+        <a href="Stories.html">Back</a>
     </div>
 
     <div class="more">
